--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -13,7 +13,14 @@ jobs:
         uses: actions/setup-go@v3
         with:
           go-version: 1.20
+      - name: Install dependencies
+        run: |
+          go get
       - name: Run linting
-        uses: golangci/golangci-lint-action@v3
+        run: |
+          if [ "$(gofmt -s -l . | wc -l)" -gt 0 ]; then
+            exit 1
+          fi
       - name: Run testing
-        run: go test -v ./...
+        run: |
+          go test -v ./...
